--- a/AlzAppV2/AlzAppV2/Info.plist
+++ b/AlzAppV2/AlzAppV2/Info.plist
@@ -57,6 +57,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>App requires camera access to take pictures</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App requires access to photo library</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
